@@ -43,6 +43,7 @@ atctRegistry.register('identifer_none', datatype.identifier_none)
 atctRegistry.register('byte-size-in-mb', datatype.byte_size_in_mb)
 atctRegistry.register('image-dimension', datatype.image_dimension)
 atctRegistry.register('image-dimension-or-no', datatype.image_dimension_or_no)
+atctRegistry.register('pil-algo', datatype.pil_algo)
 
 # schema
 atctSchema = None
